// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 기본 상태 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div />
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 에러 상태 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-red-500 bg-red-500/10"
  >
    <div />
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 완료 상태 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-green-500 bg-green-500/10"
  >
    <div />
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 진행 중 상태 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div />
  </div>
  <div
    class="absolute inset-0 rounded-xl border-2 border-blue-400/30 animate-spin"
  />
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 커스텀 아이콘 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div />
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 크기별 스냅샷 - lg 1`] = `
<div
  class="relative"
>
  <div
    class="w-16 h-16 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div />
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 크기별 스냅샷 - sm 1`] = `
<div
  class="relative"
>
  <div
    class="w-8 h-8 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div />
  </div>
</div>
`;
